# PyZWOEFW

./: README.md  setup.cfg  setup.py
PyZWOEFW/: PyQt_App.py  PyQt_Widget.py  __init__.py  pyzwoefw.py
SDK/EFW SDK/demo/MFC/: EFW_MFC.APS  EFW_MFC.cpp  EFW_MFC.h  EFW_MFC.rc  EFW_MFC.sln  EFW_MFC.vcproj  EFW_MFCDlg.cpp  EFW_MFCDlg.h  ReadMe.txt  resource.h  stdafx.cpp
SDK/EFW SDK/demo/MFC/res/: EFW_MFC.rc2
SDK/EFW SDK/include/: EFWdll.cs
examples/: PyZWOEFW_tutorial.ipynb
