[metadata]
name = PyZWOEFW
version = attr: PyZWOEFW.__version__
description = Python library for controlling the electronic filter wheel developed by ZWO
long_description = file: README.md
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Scientists
	Topic :: Software Development :: Build Tools
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Programming Language :: Python :: 3
author = Andre Ebel
author_email = ebel@lcts.u-bordeaux.fr
maintainer = Andre Ebel
maintainer_email = ebel@lcts.u-bordeaux.fr
url = https://github.com/AndreEbel/PyZWOEFW
keywords = Instrumentation
license = GPLv3
license_files = LICENSE

[options]
package_dir=
packages = find:
python_requires = >=3.7, <4.0.0

[options.packages.find]
where =
